--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3696,7 +3696,7 @@ a.btn-play i {
 }
 
 .home-piling .slide1 .slide-bg > .inside {
-  background-image: url("../img/bg-piling1.jpg");
+  background-image: url("../img/bg-piling1.png");
 }
 
 .home-piling .slide-bg-circle > .inside {
